--- a/index.css
+++ b/index.css
@@ -186,19 +186,23 @@ nav{
 .pricing{
     height: 550px;
     width: fit-content;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
     padding-top: 60px;
 }
 .pricing h3{
     text-align: center;
     font-weight: bolder;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
 }
 .wrapper {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     color: #9f9f9f;
     font-size: 15px;
+    display: flex;
+    margin: 0 auto;
 }
 .package {
     box-sizing: border-box;
@@ -209,7 +213,6 @@ nav{
     display: inline-block;
     padding: 24px;
     text-align: center;
-    float: left;
     -webkit-transition: margin-top .5s linear;
     transition: margin-top .5s linear;
     position: relative;
@@ -260,6 +263,8 @@ hr {
 }
 .wrapper li {
     margin-bottom: 15px;
+    width: 100%;
+    text-align: left;
 }
 .wrapper li:before {
     font-size: 1.3rem;
@@ -305,9 +310,12 @@ hr {
     font-weight: bolder;
 }
 .form{
-    width: fit-content;
+    width: 95%;
+    max-width: 500px;
     display: block;
     margin: 50px auto 0;
+    display: block;
+    margin: 0 auto;
 }
 .form label{
    text-align: left;
